--- a/index.html
+++ b/index.html
@@ -2,11 +2,135 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>nerd's</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header class="main-header">
+      <div class="user-block">
+        <a class="login" href="#">Главная</a>
+      </div>
+      <div class="container">
+        <nav class="main-navigation">
+          <ul>
+            <li>
+              <a href="#">Студия</a>
+            </li>
+            <li>
+              <a href="#">Клиенты</a>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="basket">
+          <a class="bskt" href="#">Корзина</a>
+        </div>
+      </div>
+    </header>
+    <main class="container">
+    <section class="aside">
+      <div class="slogan">
+        <h2 class="slogan-name">Долго, дорого, скурпулезно.</h2>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+        <a class="btn" href="#">Узнать больше</a>
+      </div>
+      <div class="slider">
+        <ul>
+          <li>
+            <a href="#">Фото-1</a>
+          </li>
+          <li>
+            <a href="#">Фото-2</a>
+          </li>
+          <li>
+            <a href="#">Фото-3</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="features">
+      <div class="features-item">
+        <b>Веб-Сайты</b>
+        <p>Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
+        <a class="btn" href="#">Заказать</a>
+      </div>
+      <div class="features-item">
+        <b>Приложения</b>
+        <p>Покорите топ-10 приложений в AppStore и GooglePlay</p>
+        <a class="btn" href="#">Заказать</a>
+      </div>
+      <div class="features-item">
+        <b>Презентации</b>
+        <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+        <a class="btn" href="#">Заказать</a>
+      </div>
+    </section>
+    <section class="desc">
+      <b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+      <p>Выполняем заказы на разработку:</p>
+        <ul>
+          <li>
+            Веб-сайтов любой сложности
+          </li>
+          <li>
+            Мобильных приложений для iOS и Android
+          </li>
+          <li>
+            Слайдшоу и видео для корпоративных презентаций
+          </li>
+        </ul>
+    </section>
+    <section class="data">
+      <div class="logo">
+        <img src="img/logo.png" width="300" height="150" alt="Лого">
+      </div>
+      <div class="digits">
+        <p>С 2004 года любим точность во всем:</p>
+        <ul>
+          <li>
+            146%
+            Уровень самоотдачи
+          </li>
+          <li>
+            100%
+            Соблюдение сроков
+          </li>
+          <li>
+            50%
+            Минимальная предоплата
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="support">
+      <a class="support-btn support-btn-html" href="https://htmlacademy.ru">html-academy</a>
+      <a class="support-btn support-btn-barsh" href="#">barbershop-borodinski</a>
+      <a class="support-btn support-btn-pink" href="#">pink</a>
+      <a class="support-btn support-btn-mishka" href="#">mishka</a>
+    </section>
+    </main>
+    <footer>
+      <section class="map">
+        <img src="img/map.png" width="3000" height="500" alt="Как пройти">
+          <div class="footer-contacts">
+            Nёrds design studio<br>
+            191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            тел. +7(812)275-75-75<br>
+            <a class="btn" href="#">Напишите нам</a>
+          </div>
+      </section>
+      <section class="footer-social">
+        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        <p>Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей</p>
+      </section>
+    </footer>
   </body>
 </html>
