--- a/index.html
+++ b/index.html
@@ -6,131 +6,111 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="user-block">
-        <a class="login" href="#">Главная</a>
-      </div>
       <div class="container">
+        <a class="home" href="#" img src="img/home.png" width="100" height="50" alt="Главная">Главная</a>
         <nav class="main-navigation">
           <ul>
-            <li>
-              <a href="#">Студия</a>
-            </li>
-            <li>
-              <a href="#">Клиенты</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
-        <div class="basket">
+        <div class="user-block">
           <a class="bskt" href="#">Корзина</a>
         </div>
       </div>
+      <section class="aside">
+        <div class="slogan">
+          <b class="slogan-name">Долго, дорого, скурпулезно.</b>
+          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+          <a class="btn" href="#">Узнать больше</a>
+        </div>
+        <div class="slider">
+          <ul>
+            <li><a href="#">Фото-1</a></li>
+            <li><a href="#">Фото-2</a></li>
+            <li><a href="#">Фото-3</a></li>
+          </ul>
+        </div>
+      </section>
     </header>
     <main class="container">
-    <section class="aside">
-      <div class="slogan">
-        <h2 class="slogan-name">Долго, дорого, скурпулезно.</h2>
-        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-        <a class="btn" href="#">Узнать больше</a>
-      </div>
-      <div class="slider">
-        <ul>
-          <li>
-            <a href="#">Фото-1</a>
-          </li>
-          <li>
-            <a href="#">Фото-2</a>
-          </li>
-          <li>
-            <a href="#">Фото-3</a>
-          </li>
-        </ul>
-      </div>
-    </section>
     <section class="features">
       <div class="features-item">
-        <b>Веб-Сайты</b>
+        <img src="img/sites.png" width="300" height="150" alt="sites">
+        <h3>Веб-Сайты</h3>
         <p>Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
         <a class="btn" href="#">Заказать</a>
       </div>
       <div class="features-item">
-        <b>Приложения</b>
+        <img src="img/apps.png" width="300" height="150" alt="apps">
+        <h3>Приложения</h3>
         <p>Покорите топ-10 приложений в AppStore и GooglePlay</p>
         <a class="btn" href="#">Заказать</a>
       </div>
       <div class="features-item">
-        <b>Презентации</b>
+        <img src="img/presentation.png" width="300" height="150" alt="presentation">
+        <h3>Презентации</h3>
         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
         <a class="btn" href="#">Заказать</a>
       </div>
     </section>
-    <section class="desc">
-      <b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+    <section class="about-us">
+      <div class="about">
+      <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
       <p>Выполняем заказы на разработку:</p>
         <ul>
-          <li>
-            Веб-сайтов любой сложности
-          </li>
-          <li>
-            Мобильных приложений для iOS и Android
-          </li>
-          <li>
-            Слайдшоу и видео для корпоративных презентаций
-          </li>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
-    </section>
-    <section class="data">
+      </div>
       <div class="logo">
         <img src="img/logo.png" width="300" height="150" alt="Лого">
       </div>
       <div class="digits">
         <p>С 2004 года любим точность во всем:</p>
-        <ul>
-          <li>
-            146%
-            Уровень самоотдачи
-          </li>
-          <li>
-            100%
-            Соблюдение сроков
-          </li>
-          <li>
-            50%
-            Минимальная предоплата
-          </li>
-        </ul>
+          <div class="surrender">
+            <span>146%</span>
+            <span>Уровень самоотдачи</span>
+          </div>
+          <div class="terms">
+            <span>100%</span>
+            <span>Соблюдение сроков</span>
+          </div>
+          <div class="prepay">
+            <span>50%</span>
+            <span>Минимальная предоплата</span>
+          </div>
       </div>
     </section>
-    <section class="support">
-      <a class="support-btn support-btn-html" href="https://htmlacademy.ru">html-academy</a>
-      <a class="support-btn support-btn-barsh" href="#">barbershop-borodinski</a>
-      <a class="support-btn support-btn-pink" href="#">pink</a>
-      <a class="support-btn support-btn-mishka" href="#">mishka</a>
+    <section class="portfolio">
+      <a class="portfolio-btn" href="https://htmlacademy.ru" img src="img/html.png" width="300" height="100" alt="html-academy"></a>
+      <a class="portfolio-btn" href="#" img src="img/barsh.png" width="300" height="100" alt="barbershop-borodinski"></a>
+      <a class="portfolio-btn" href="#" img src="img/pink.png" width="300" height="100" alt="pink"></a>
+      <a class="portfolio-btn" href="#" img src="img/mishka.png" width="300" height="100" alt="mishka"></a>
     </section>
     </main>
-    <footer>
-      <section class="map">
-        <img src="img/map.png" width="3000" height="500" alt="Как пройти">
+      <div class="map">
           <div class="footer-contacts">
-            Nёrds design studio<br>
-            191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-            тел. +7(812)275-75-75<br>
+            <p>Nёrds design studio</p>
+            <p>191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p href="+7(812)275-75-75">тел. +7(812)275-75-75</p>
             <a class="btn" href="#">Напишите нам</a>
           </div>
-      </section>
-      <section class="footer-social">
+      </div>
+      <footer>
+      <div class="footer-social">
         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-        <p>Давайте дружить, это выгодно!</p>
+      </div>
+      <div>
+        <h4>Давайте дружить, это выгодно!</h4>
         <p>Скидка 10% для друзей из социальных сетей</p>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
