--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>nerd's</title>
+    <title>nёrd's</title>
   </head>
   <body>
     <header class="main-header">
@@ -17,21 +17,19 @@
           </ul>
         </nav>
         <div class="user-block">
-          <a class="bskt" href="#">Корзина</a>
+          <a href="#">Корзина</a>
         </div>
       </div>
       <section class="aside">
         <div class="slogan">
-          <b class="slogan-name">Долго, дорого, скурпулезно.</b>
+          <b class="slogan-name">Долго, дорого, скрупулёзно.</b>
           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
           <a class="btn" href="#">Узнать больше</a>
         </div>
         <div class="slider">
-          <ul>
-            <li><a href="#">Фото-1</a></li>
-            <li><a href="#">Фото-2</a></li>
-            <li><a href="#">Фото-3</a></li>
-          </ul>
+          <div class="slider-page"><a href="#">Фото-1</a></div>
+          <div class="slider-page"><a href="#">Фото-2</a></div>
+          <div class="slider-page"><a href="#">Фото-3</a></div>
         </div>
       </section>
     </header>
@@ -59,7 +57,7 @@
     <section class="about-us">
       <div class="about">
       <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
       <p>Выполняем заказы на разработку:</p>
         <ul>
           <li>Веб-сайтов любой сложности</li>
@@ -71,7 +69,7 @@
         <img src="img/logo.png" width="300" height="150" alt="Лого">
       </div>
       <div class="digits">
-        <p>С 2004 года любим точность во всем:</p>
+        <p>С 2004 года любим точность во всём:</p>
           <div class="surrender">
             <span>146%</span>
             <span>Уровень самоотдачи</span>
@@ -103,9 +101,9 @@
       </div>
       <footer>
       <div class="footer-social">
-        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        <a class="social-btn" href="#">Вконтакте</a>
+        <a class="social-btn" href="#">Фейсбук</a>
+        <a class="social-btn" href="#">Инстаграм</a>
       </div>
       <div>
         <h4>Давайте дружить, это выгодно!</h4>
