--- a/shop.html
+++ b/shop.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Магазин</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   <header class="main-header">
     <div class="container">
-      <a class="home" href="#" img src="img/home.png" width="100" height="50" alt="Главная">Главная</a>
+      <a class="home" href="#"> <img src="img/home.png" width="160" height="65" alt="Главная">Главная</a>
       <nav class="main-navigation">
         <ul>
           <li><a href="#">Студия</a></li>
@@ -23,91 +24,94 @@
     <h1>Магазин готовых шаблонов</h1>
   </header>
   <main>
-    <table>
-      <tr>
-        <td>
-          <form action="#" method="#">
-            <div>
-             <h3>Стоимость</h3>
-            </div>
-            <div>
-              <h3>Сетка</h3>
-              <ul>
-                <li><input id="adaptive" type="radio" name="grid" value="adaptive">
-                    <label for="adaptive">Адаптивная</label></li>
-                <li><input id="fix" type="radio" name="grid" value="fix">
-                    <label for="fix">Фиксированная</label></li>
-                <li><input id="rubber" type="radio" name="grid" value="rubber">
-                    <label for="rubber">Резиновая</label></li>
-              </ul>
-            </div>
-            <div>
-              <h3>Особенности</h3>
-              <ul>
-                <li><input id="slider" type="checkbox">
-                    <label for="slider">Слайдер</label></li>
-                <li><input id="advantage-block" type="checkbox">
-                    <label for="advantage-block">Блок преимуществ</label></li>
-                <li><input id="news" type="checkbox">
-                    <label for="news">Новости</label></li>
-                <li><input id="gallery" type="checkbox">
-                    <label for="gallery">Галерея</label></li>
-                <li><input id="basket" type="checkbox">
-                    <label for="basket">Корзина</label></li>
-              </ul>
-            </div>
-            <input type="submit" value="Показать">
-          </form>
-        </td>
-        <td>
-          <section class="gallery-sorting">
-            <h3>Сортировать</h3>
-            <ul>
-              <li><a href="#">по цене</a></li>
-              <li><a href="#">по типу</a></li>
-              <li><a href="#">по названию</a></li>
-              <li><a href="#">вниз</a></li>
-              <li><a href="#">вверх</a></li>
-            </ul>
-          </section>
-          <article class="gallery">
-            <div class="hat"></div>
-            <img src="img/sedona.png" width="300" height="500" alt="sedona">
-            <a class="price-btn" href="#">9900 руб.</a>
-            <img src="img/pink.png" width="300" height="500" alt="pink">
-            <a class="price-btn" href="#">9900 руб.</a>
-            <img src="img/barsh.png" width="300" height="500" alt="barsh">
-            <a class="price-btn" href="#">9900 руб.</a>
-            <img src="img/mishka.png" width="300" height="500" alt="mishka">
-            <a class="price-btn" href="#">9900 руб.</a>
-            <img src="img/study.png" width="300" height="500" alt="study">
-            <a class="price-btn" href="#">9900 руб.</a>
-            <img src="img/kvas.png" width="300" height="500" alt="kvas">
-            <a class="price-btn" href="#">9900 руб.</a>
-          </article>
-        </td>
-      </tr>
-    </table>
-    <paginator>
-      <a class="page-btn page-active"  href="#">1</a>
+    <section>
+      <form action="#" method="#">
+          <h3>Стоимость</h3>
+            <label for="min-price">от</label>
+              <input id="min-price" type="text">
+            <label for="max-price">до</label>
+              <input id="max-price" type="text">
+          <h3>Сетка</h3>
+            <input id="adaptive" type="radio" name="grid" value="adaptive">
+              <label for="adaptive">Адаптивная</label>
+            <input id="fix" type="radio" name="grid" value="fix">
+              <label for="fix">Фиксированная</label>
+            <input id="rubber" type="radio" name="grid" value="rubber">
+              <label for="rubber">Резиновая</label>
+          <h3>Особенности</h3>
+            <input id="slider" type="checkbox">
+              <label for="slider">Слайдер</label>
+            <input id="advantage-block" type="checkbox">
+              <label for="advantage-block">Блок преимуществ</label>
+            <input id="news" type="checkbox">
+              <label for="news">Новости</label>
+            <input id="gallery" type="checkbox">
+              <label for="gallery">Галерея</label>
+            <input id="basket" type="checkbox">
+              <label for="basket">Корзина</label>
+        <input type="submit" value="Показать">
+      </form>
+    </section>
+    <div class="gallery-sorting">
+      <h3>Сортировать</h3>
+        <a href="#">по цене</a>
+        <a href="#">по типу</a>
+        <a href="#">по названию</a>
+        <a href="#">вниз</a>
+        <a href="#">вверх</a>
+    </div>
+    <div class="cards"> <!--здесь тоже не уверена в правильности-->
+      <article>
+        <div class"hat"><span class="hat-span"></span></div>
+        <img src="img/sedona.jpg" width="360" height="576" alt="sedona">
+        <a class="price-btn" href="#">9900 руб.</a>
+      </article>
+      <article>
+        <div class"hat"><span class="hat-span"></span></div>
+        <img src="img/pink.jpg" width="360" height="576" alt="pink">
+        <a class="price-btn" href="#">9900 руб.</a>
+      </article>
+      <article>
+        <div class"hat"><span class="hat-span"></span></div>
+        <img src="img/barsh.jpg" width="360" height="576" alt="barsh">
+        <a class="price-btn" href="#">9900 руб.</a>
+      </article>
+      <article>
+        <div class"hat"><span class="hat-span"></span></div>
+        <img src="img/mishka.jpg" width="360" height="576" alt="mishka">
+        <a class="price-btn" href="#">9900 руб.</a>
+      </article>
+      <article>
+        <div class"hat"><span class="hat-span"></span></div>
+        <img src="img/study.jpg" width="360" height="576" alt="study">
+        <a class="price-btn" href="#">9900 руб.</a>
+      </article>
+      <article>
+        <div class"hat"><span class="hat-span"></span></div>
+        <img src="img/kvas.jpg" width="360" height="576" alt="kvas">
+        <a class="price-btn" href="#">9900 руб.</a>
+      </article>
+    </div>
+    <div class="paginator">
+      <a class="page-btn page-active" href="#">1</a>
       <a class="page-btn" href="#">2</a>
       <a class="page-btn" href="#">3</a>
       <a class="page-btn" href="#">Следующая</a>
-    </paginator>
+    </div>
   </main>
   <div class="map">
       <div class="footer-contacts">
         <p>Nёrds design studio</p>
         <p>191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <p href="+7(812)275-75-75">тел. +7(812)275-75-75</p>
+        <a href="tell">тел. +7(812)275-75-75</a>
         <a class="btn" href="#">Напишите нам</a>
       </div>
   </div>
   <footer>
   <div class="footer-social">
-    <a class="social-btn" href="#">Вконтакте</a>
-    <a class="social-btn" href="#">Фейсбук</a>
-    <a class="social-btn" href="#">Инстаграм</a>>
+    <a class="social-btn" href="#"></a>
+    <a class="social-btn" href="#"></a>
+    <a class="social-btn" href="#"></a>
   </div>
   <div>
     <h4>Давайте дружить, это выгодно!</h4>
