--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>nёrd's</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
-        <a class="home" href="#" img src="img/home.png" width="100" height="50" alt="Главная">Главная</a>
+        <a class="home" href="#"><img src="img/home.png" width="160" height="65" alt="Главная"></a>
         <nav class="main-navigation">
           <ul>
             <li><a href="#">Студия</a></li>
@@ -20,35 +21,49 @@
           <a href="#">Корзина</a>
         </div>
       </div>
-      <section class="aside">
-        <div class="slogan">
+      <section class="slider"> <!--не понимаю, как сделать страницы в слайдере. да и вообще не уверена, что он сам верный-->
+        <div class="slider-slogan"
           <b class="slogan-name">Долго, дорого, скрупулёзно.</b>
           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
           <a class="btn" href="#">Узнать больше</a>
         </div>
-        <div class="slider">
-          <div class="slider-page"><a href="#">Фото-1</a></div>
-          <div class="slider-page"><a href="#">Фото-2</a></div>
-          <div class="slider-page"><a href="#">Фото-3</a></div>
+        <div class="slider-img">
+          <div class="slider-page"><img src="img/slide1.png" width="760" height="431" alt="slide1"></div>
+        </div>
+        <div class="slider-slogan">
+          <b class="slogan-name">Любите ли вы математику, как любим её мы?</b>
+          <p>Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им возможность все просчитать</p>
+          <a class="btn" href="#">Узнать больше</a>
+        </div>
+        <div class="slider-img">
+          <div class="slider-page"><img src="img/slide2.png" width="760" height="431" alt="slide2"></div>
+        </div>
+        <div class="slider-slogan">
+          <b class="slogan-name">Только наркотики, только хардкор!</b>
+          <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов</p>
+          <a class="btn" href="#">Узнать больше</a>
+        </div>
+        <div class="slider-img">
+          <div class="slider-page"><img src="img/slide3.png" width="760" height="431" alt="slide3"></div>
         </div>
       </section>
     </header>
     <main class="container">
     <section class="features">
       <div class="features-item">
-        <img src="img/sites.png" width="300" height="150" alt="sites">
+        <img src="img/sites.jpg" width="300" height="146" alt="sites">
         <h3>Веб-Сайты</h3>
         <p>Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
         <a class="btn" href="#">Заказать</a>
       </div>
       <div class="features-item">
-        <img src="img/apps.png" width="300" height="150" alt="apps">
+        <img src="img/apps.jpg" width="300" height="146" alt="apps">
         <h3>Приложения</h3>
         <p>Покорите топ-10 приложений в AppStore и GooglePlay</p>
         <a class="btn" href="#">Заказать</a>
       </div>
       <div class="features-item">
-        <img src="img/presentation.png" width="300" height="150" alt="presentation">
+        <img src="img/presentation.jpg" width="300" height="146" alt="presentation">
         <h3>Презентации</h3>
         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
         <a class="btn" href="#">Заказать</a>
@@ -66,7 +81,7 @@
         </ul>
       </div>
       <div class="logo">
-        <img src="img/logo.png" width="300" height="150" alt="Лого">
+        <img src="img/logo.jpg" width="360" height="208" alt="Лого">
       </div>
       <div class="digits">
         <p>С 2004 года любим точность во всём:</p>
@@ -85,25 +100,25 @@
       </div>
     </section>
     <section class="portfolio">
-      <a class="portfolio-btn" href="https://htmlacademy.ru" img src="img/html.png" width="300" height="100" alt="html-academy"></a>
-      <a class="portfolio-btn" href="#" img src="img/barsh.png" width="300" height="100" alt="barbershop-borodinski"></a>
-      <a class="portfolio-btn" href="#" img src="img/pink.png" width="300" height="100" alt="pink"></a>
-      <a class="portfolio-btn" href="#" img src="img/mishka.png" width="300" height="100" alt="mishka"></a>
+      <a class="portfolio-btn" href="https://htmlacademy.ru"> <img src="img/html.png" width="260" height="180" alt="html-academy"></a>
+      <a class="portfolio-btn" href="#"> <img src="img/barsh.png" width="260" height="180" alt="barbershop-borodinski"></a>
+      <a class="portfolio-btn" href="#"> <img src="img/pink.png" width="260" height="180" alt="pink"></a>
+      <a class="portfolio-btn" href="#"> <img src="img/mishka.png" width="260" height="180" alt="mishka"></a>
     </section>
     </main>
-      <div class="map">
+      <div class="map"> <!-- не понятно, что с изображением-->
           <div class="footer-contacts">
             <p>Nёrds design studio</p>
             <p>191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <p href="+7(812)275-75-75">тел. +7(812)275-75-75</p>
+            <a href="tell">тел. +7(812)275-75-75</a>
             <a class="btn" href="#">Напишите нам</a>
           </div>
       </div>
       <footer>
       <div class="footer-social">
-        <a class="social-btn" href="#">Вконтакте</a>
-        <a class="social-btn" href="#">Фейсбук</a>
-        <a class="social-btn" href="#">Инстаграм</a>
+        <a class="social-btn" href="#"></a>
+        <a class="social-btn" href="#"></a>
+        <a class="social-btn" href="#"></a>
       </div>
       <div>
         <h4>Давайте дружить, это выгодно!</h4>
