--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <a class="home" href="#"><img src="img/home.png" width="160" height="65" alt="Главная"></a>
         <nav class="main-navigation">
           <ul>
@@ -21,8 +21,8 @@
           <a href="#">Корзина</a>
         </div>
       </div>
-      <section class="slider"> <!--не понимаю, как сделать страницы в слайдере. да и вообще не уверена, что он сам верный-->
-        <div class="slider-slogan"
+      <section class="slider clearfix"> <!--не понимаю, как сделать страницы в слайдере. да и вообще не уверена, что он сам верный-->
+        <div class="slider-slogan">
           <b class="slogan-name">Долго, дорого, скрупулёзно.</b>
           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
           <a class="btn" href="#">Узнать больше</a>
@@ -31,16 +31,16 @@
           <div class="slider-page"><img src="img/slide1.png" width="760" height="431" alt="slide1"></div>
         </div>
         <div class="slider-slogan">
-          <b class="slogan-name">Любите ли вы математику, как любим её мы?</b>
-          <p>Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им возможность все просчитать</p>
+          <b class="slogan-name">Любим математику, как никто другой</b>
+          <p>Никакого креатива, только математические формулы для расчёта идеальных пропорций.</p>
           <a class="btn" href="#">Узнать больше</a>
         </div>
         <div class="slider-img">
           <div class="slider-page"><img src="img/slide2.png" width="760" height="431" alt="slide2"></div>
         </div>
         <div class="slider-slogan">
-          <b class="slogan-name">Только наркотики, только хардкор!</b>
-          <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов</p>
+          <b class="slogan-name">Только ночь, только хардкор!</b>
+          <p>Работать днём,как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
           <a class="btn" href="#">Узнать больше</a>
         </div>
         <div class="slider-img">
@@ -49,27 +49,27 @@
       </section>
     </header>
     <main class="container">
-    <section class="features">
-      <div class="features-item">
+    <section class="features clearfix">
+      <div class="features-item1">
         <img src="img/sites.jpg" width="300" height="146" alt="sites">
         <h3>Веб-Сайты</h3>
         <p>Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
         <a class="btn" href="#">Заказать</a>
       </div>
-      <div class="features-item">
+      <div class="features-item2">
         <img src="img/apps.jpg" width="300" height="146" alt="apps">
         <h3>Приложения</h3>
         <p>Покорите топ-10 приложений в AppStore и GooglePlay</p>
         <a class="btn" href="#">Заказать</a>
       </div>
-      <div class="features-item">
+      <div class="features-item3">
         <img src="img/presentation.jpg" width="300" height="146" alt="presentation">
         <h3>Презентации</h3>
         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
         <a class="btn" href="#">Заказать</a>
       </div>
     </section>
-    <section class="about-us">
+    <section class="about-us clearfix">
       <div class="about">
       <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
@@ -80,11 +80,12 @@
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </div>
-      <div class="logo">
-        <img src="img/logo.jpg" width="360" height="208" alt="Лого">
-      </div>
-      <div class="digits">
-        <p>С 2004 года любим точность во всём:</p>
+      <div class="about-img">
+        <div class="logo">
+          <img src="img/logo.jpg" width="360" height="208" alt="Лого">
+        </div>
+        <div class="digits">
+          <p>С 2004 года любим точность во всём:</p>
           <div class="surrender">
             <span>146%</span>
             <span>Уровень самоотдачи</span>
@@ -97,6 +98,7 @@
             <span>50%</span>
             <span>Минимальная предоплата</span>
           </div>
+        </div>
       </div>
     </section>
     <section class="portfolio">
@@ -106,7 +108,8 @@
       <a class="portfolio-btn" href="#"> <img src="img/mishka.png" width="260" height="180" alt="mishka"></a>
     </section>
     </main>
-      <div class="map"> <!-- не понятно, что с изображением-->
+      <div class="map">
+        <img src="img/map.psb" width="1440" height="415" alt="map">
           <div class="footer-contacts">
             <p>Nёrds design studio</p>
             <p>191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -114,13 +117,13 @@
             <a class="btn" href="#">Напишите нам</a>
           </div>
       </div>
-      <footer>
+      <footer class="container">
       <div class="footer-social">
         <a class="social-btn" href="#"></a>
         <a class="social-btn" href="#"></a>
         <a class="social-btn" href="#"></a>
       </div>
-      <div>
+      <div class="friends">
         <h4>Давайте дружить, это выгодно!</h4>
         <p>Скидка 10% для друзей из социальных сетей</p>
       </div>
