--- a/shop.html
+++ b/shop.html
@@ -21,10 +21,10 @@
         <a href="#">Корзина</a>
       </div>
     </div>
-    <h1>Магазин готовых шаблонов</h1>
   </header>
-  <main>
-    <section>
+  <main class="container clearfix">
+    <div class="caption"><h1>Магазин готовых шаблонов</h1></div>
+    <section class="selection">
       <form action="#" method="#">
           <h3>Стоимость</h3>
             <label for="min-price">от</label>
@@ -52,6 +52,7 @@
         <input type="submit" value="Показать">
       </form>
     </section>
+    <section class="examples clearfix">
     <div class="gallery-sorting">
       <h3>Сортировать</h3>
         <a href="#">по цене</a>
@@ -60,33 +61,33 @@
         <a href="#">вниз</a>
         <a href="#">вверх</a>
     </div>
-    <div class="cards"> <!--здесь тоже не уверена в правильности-->
-      <article>
+    <div class="cards">
+      <article class="sedona">
         <div class"hat"><span class="hat-span"></span></div>
         <img src="img/sedona.jpg" width="360" height="576" alt="sedona">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
-      <article>
+      <article class="pink">
         <div class"hat"><span class="hat-span"></span></div>
         <img src="img/pink.jpg" width="360" height="576" alt="pink">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
-      <article>
+      <article class="barsh">
         <div class"hat"><span class="hat-span"></span></div>
         <img src="img/barsh.jpg" width="360" height="576" alt="barsh">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
-      <article>
+      <article class="mishka">
         <div class"hat"><span class="hat-span"></span></div>
         <img src="img/mishka.jpg" width="360" height="576" alt="mishka">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
-      <article>
+      <article class="study">
         <div class"hat"><span class="hat-span"></span></div>
         <img src="img/study.jpg" width="360" height="576" alt="study">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
-      <article>
+      <article class="kvas">
         <div class"hat"><span class="hat-span"></span></div>
         <img src="img/kvas.jpg" width="360" height="576" alt="kvas">
         <a class="price-btn" href="#">9900 руб.</a>
@@ -98,8 +99,10 @@
       <a class="page-btn" href="#">3</a>
       <a class="page-btn" href="#">Следующая</a>
     </div>
+    </section>
   </main>
   <div class="map">
+    <img src="img/map.psb" width="1440" height="415" alt="map">
       <div class="footer-contacts">
         <p>Nёrds design studio</p>
         <p>191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -107,16 +110,16 @@
         <a class="btn" href="#">Напишите нам</a>
       </div>
   </div>
-  <footer>
-  <div class="footer-social">
-    <a class="social-btn" href="#"></a>
-    <a class="social-btn" href="#"></a>
-    <a class="social-btn" href="#"></a>
-  </div>
-  <div>
-    <h4>Давайте дружить, это выгодно!</h4>
-    <p>Скидка 10% для друзей из социальных сетей</p>
-  </div>
-</footer>
+  <footer class="container">
+    <div class="footer-social">
+      <a class="social-btn" href="#"></a>
+      <a class="social-btn" href="#"></a>
+      <a class="social-btn" href="#"></a>
+    </div>
+    <div class="friends">
+      <h4>Давайте дружить, это выгодно!</h4>
+      <p>Скидка 10% для друзей из социальных сетей</p>
+    </div>
+  </footer>
 </body>
 </html>
