--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>nёrd's</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700.." rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -21,7 +23,7 @@
           <a href="#">Корзина</a>
         </div>
       </div>
-      <section class="slider clearfix"> <!--не понимаю, как сделать страницы в слайдере. да и вообще не уверена, что он сам верный-->
+      <section class="slider clearfix">
         <div class="slider-slogan">
           <b class="slogan-name">Долго, дорого, скрупулёзно.</b>
           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
@@ -69,7 +71,7 @@
         <a class="btn" href="#">Заказать</a>
       </div>
     </section>
-    <section class="about-us clearfix">
+    <section class="about-us">
       <div class="about">
       <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
