--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Магазин</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700.." rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
   </head>
   <body>
   <header class="main-header">
@@ -63,32 +65,32 @@
     </div>
     <div class="cards">
       <article class="sedona">
-        <div class"hat"><span class="hat-span"></span></div>
+        <div class="hat"><span class="hat-span"></span></div>
         <img src="img/sedona.jpg" width="360" height="576" alt="sedona">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
       <article class="pink">
-        <div class"hat"><span class="hat-span"></span></div>
+        <div class="hat"><span class="hat-span"></span></div>
         <img src="img/pink.jpg" width="360" height="576" alt="pink">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
       <article class="barsh">
-        <div class"hat"><span class="hat-span"></span></div>
+        <div class="hat"><span class="hat-span"></span></div>
         <img src="img/barsh.jpg" width="360" height="576" alt="barsh">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
       <article class="mishka">
-        <div class"hat"><span class="hat-span"></span></div>
+        <div class="hat"><span class="hat-span"></span></div>
         <img src="img/mishka.jpg" width="360" height="576" alt="mishka">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
       <article class="study">
-        <div class"hat"><span class="hat-span"></span></div>
+        <div class="hat"><span class="hat-span"></span></div>
         <img src="img/study.jpg" width="360" height="576" alt="study">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
       <article class="kvas">
-        <div class"hat"><span class="hat-span"></span></div>
+        <div class="hat"><span class="hat-span"></span></div>
         <img src="img/kvas.jpg" width="360" height="576" alt="kvas">
         <a class="price-btn" href="#">9900 руб.</a>
       </article>
