--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>nёrd's</title>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700.." rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container clearfix">
-        <a class="home" href="#"><img src="img/home.png" width="160" height="65" alt="Главная"></a>
+        <a class="home" href="index.html"><img src="img/home.png" width="160" height="65" alt="Главная"></a>
         <nav class="main-navigation">
           <ul>
-            <li><a href="#">Студия</a></li>
-            <li><a href="#">Клиенты</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
+            <a href="#">Студия</a>
+            <a href="#">Клиенты</a>
+            <a href="shop.html">Магазин</a>
+            <a href="#">Контакты</a>
           </ul>
         </nav>
         <div class="user-block">
@@ -52,26 +52,26 @@
     </header>
     <main class="container">
     <section class="features clearfix">
-      <div class="features-item1">
+      <div class="features-item">
         <img src="img/sites.jpg" width="300" height="146" alt="sites">
         <h3>Веб-Сайты</h3>
         <p>Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
         <a class="btn" href="#">Заказать</a>
       </div>
-      <div class="features-item2">
+      <div class="features-item">
         <img src="img/apps.jpg" width="300" height="146" alt="apps">
         <h3>Приложения</h3>
         <p>Покорите топ-10 приложений в AppStore и GooglePlay</p>
         <a class="btn" href="#">Заказать</a>
       </div>
-      <div class="features-item3">
+      <div class="features-item">
         <img src="img/presentation.jpg" width="300" height="146" alt="presentation">
         <h3>Презентации</h3>
         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
         <a class="btn" href="#">Заказать</a>
       </div>
     </section>
-    <section class="about-us">
+    <section class="about-us clearfix">
       <div class="about">
       <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
@@ -111,8 +111,7 @@
     </section>
     </main>
       <div class="map">
-        <img src="img/map.psb" width="1440" height="415" alt="map">
-          <div class="footer-contacts">
+          <div class="map-contacts">
             <p>Nёrds design studio</p>
             <p>191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <a href="tell">тел. +7(812)275-75-75</a>
