--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
       <div class="container clearfix">
         <a class="home" href="index.html"><img src="img/home.png" width="160" height="65" alt="Главная"></a>
         <nav class="main-navigation">
-          <ul>
             <a href="#">Студия</a>
             <a href="#">Клиенты</a>
             <a href="shop.html">Магазин</a>
             <a href="#">Контакты</a>
-          </ul>
         </nav>
         <div class="user-block">
+          <div class="basket-img"></div>
           <a href="#">Корзина</a>
         </div>
       </div>
@@ -56,21 +55,22 @@
         <img src="img/sites.jpg" width="300" height="146" alt="sites">
         <h3>Веб-Сайты</h3>
         <p>Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
-        <a class="btn" href="#">Заказать</a>
+        <a class="btn-item" href="#">Заказать</a>
       </div>
       <div class="features-item">
         <img src="img/apps.jpg" width="300" height="146" alt="apps">
         <h3>Приложения</h3>
         <p>Покорите топ-10 приложений в AppStore и GooglePlay</p>
-        <a class="btn" href="#">Заказать</a>
+        <a class="btn-item" href="#">Заказать</a>
       </div>
       <div class="features-item">
         <img src="img/presentation.jpg" width="300" height="146" alt="presentation">
         <h3>Презентации</h3>
         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-        <a class="btn" href="#">Заказать</a>
+        <a class="btn-item" href="#">Заказать</a>
       </div>
     </section>
+    <hr>
     <section class="about-us clearfix">
       <div class="about">
       <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
