--- a/shop.html
+++ b/shop.html
@@ -8,18 +8,20 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-  <header class="main-header clearfix">
-    <div class="container">
-      <a class="home" href="index.html"> <img src="img/home.png" width="160" height="65" alt="Главная">Главная</a>
+  <header class="main-header">
+    <div class="container clearfix">
+      <a class="home" href="index.html"> <img src="img/home.png" width="160" height="65" alt="Главная"></a>
       <nav class="main-navigation">
           <a href="#">Студия</a>
           <a href="#">Клиенты</a>
-          <a href="shop.html">Магазин</a>
+          <a class="active" href="shop.html">Магазин</a>
           <a href="#">Контакты</a>
       </nav>
       <div class="user-block">
+        <div class="basket-img"></div>
         <a href="#">Корзина</a>
       </div>
+    </div>
     </div>
   </header>
   <main class="container clearfix">
