--- a/index.html
+++ b/index.html
@@ -18,35 +18,29 @@
             <a href="#">Контакты</a>
         </nav>
         <div class="user-block">
-          <div class="basket-img"></div>
+          <a class="basket-img" href="#"></a>
           <a href="#">Корзина</a>
         </div>
       </div>
-      <section class="slider clearfix">
-        <div class="slider-slogan">
+      <section class="slider">
+        <div class="slider-page">
           <b class="slogan-name">Долго, дорого, скрупулёзно.</b>
-          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+          <p class="slogan-words">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
           <a class="btn" href="#">Узнать больше</a>
+            <div class="slider-img slide1"></div>
         </div>
-        <div class="slider-img">
-          <div class="slider-page"><img src="img/slide1.png" width="760" height="431" alt="slide1"></div>
-        </div>
-        <div class="slider-slogan">
+      <!--  <div class="slider-page">
           <b class="slogan-name">Любим математику, как никто другой</b>
-          <p>Никакого креатива, только математические формулы для расчёта идеальных пропорций.</p>
+          <p class="slogan-words">Никакого креатива, только математические формулы для расчёта идеальных пропорций.</p>
           <a class="btn" href="#">Узнать больше</a>
+            <div class="slider-img slide2"></div>
         </div>
-        <div class="slider-img">
-          <div class="slider-page"><img src="img/slide2.png" width="760" height="431" alt="slide2"></div>
-        </div>
-        <div class="slider-slogan">
+        <div class="slider-page">
           <b class="slogan-name">Только ночь, только хардкор!</b>
-          <p>Работать днём,как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <p class="slogan-words">Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
           <a class="btn" href="#">Узнать больше</a>
-        </div>
-        <div class="slider-img">
-          <div class="slider-page"><img src="img/slide3.png" width="760" height="431" alt="slide3"></div>
-        </div>
+            <div class="slider-img slide3"></div>
+        </div>   -->
       </section>
     </header>
     <main class="container">
@@ -55,50 +49,50 @@
         <img src="img/sites.jpg" width="300" height="146" alt="sites">
         <h3>Веб-Сайты</h3>
         <p>Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
-        <a class="btn-item" href="#">Заказать</a>
+        <a class="btn-item btn-red" href="#">Заказать</a>
       </div>
       <div class="features-item">
         <img src="img/apps.jpg" width="300" height="146" alt="apps">
         <h3>Приложения</h3>
-        <p>Покорите топ-10 приложений в AppStore и GooglePlay</p>
-        <a class="btn-item" href="#">Заказать</a>
+        <p class="bottom">Покорите топ-10 приложений в AppStore и GooglePlay</p>
+        <a class="btn-item btn-green" href="#">Заказать</a>
       </div>
       <div class="features-item">
         <img src="img/presentation.jpg" width="300" height="146" alt="presentation">
         <h3>Презентации</h3>
         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-        <a class="btn-item" href="#">Заказать</a>
+        <a class="btn-item btn-yellow" href="#">Заказать</a>
       </div>
     </section>
-    <hr>
+    <div class="border"></div>
     <section class="about-us clearfix">
       <div class="about">
-      <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
-      <p>Выполняем заказы на разработку:</p>
-        <ul>
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
+      <h2>Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
+      <p class="about-word">Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
+      <p class="design">Выполняем заказы на разработку:</p>
+        <ul class="d-list">
+          <li class="design-list">Веб-сайтов любой сложности</li>
+          <li class="design-list"> Мобильных приложений для iOS и Android</li>
+          <li class="design-list"> Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </div>
       <div class="about-img">
         <div class="logo">
           <img src="img/logo.jpg" width="360" height="208" alt="Лого">
         </div>
-        <div class="digits">
-          <p>С 2004 года любим точность во всём:</p>
-          <div class="surrender">
-            <span>146%</span>
-            <span>Уровень самоотдачи</span>
+        <div class="digits clearfix">
+          <p class="love">С 2004 года любим точность во всём:</p>
+          <div class="plus">
+            <span class="percent">146<span class="sup">%</span></span>
+            <span class="percent-w">Уровень самоотдачи</span>
           </div>
-          <div class="terms">
-            <span>100%</span>
-            <span>Соблюдение сроков</span>
+          <div class="plus">
+            <span class="percent">100<span class="sup">%</span></span>
+            <span class="percent-w">Соблюдение сроков</span>
           </div>
-          <div class="prepay">
-            <span>50%</span>
-            <span>Минимальная предоплата</span>
+          <div class="plus">
+            <span class="percent">50<span class="sup">%</span></span>
+            <span class="percent-w">Минимальная предоплата</span>
           </div>
         </div>
       </div>
@@ -111,18 +105,19 @@
     </section>
     </main>
       <div class="map">
+        <div class="map-marker"></div>
           <div class="map-contacts">
-            <p>Nёrds design studio</p>
-            <p>191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <a href="tell">тел. +7(812)275-75-75</a>
-            <a class="btn" href="#">Напишите нам</a>
+            <p class="name">Nёrds design studio</p>
+            <p class="adress">191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <a class="phone" href="tell">тел. +7(812)275-75-75</a>
+            <a class="btn-map" href="#">Напишите нам</a>
           </div>
       </div>
-      <footer class="container">
+      <footer class="container footer-container">
       <div class="footer-social">
-        <a class="social-btn" href="#"></a>
-        <a class="social-btn" href="#"></a>
-        <a class="social-btn" href="#"></a>
+        <a class="social-btn vk" href="#"></a>
+        <a class="social-btn fb" href="#"></a>
+        <a class="social-btn insta" href="#"></a>
       </div>
       <div class="friends">
         <h4>Давайте дружить, это выгодно!</h4>
