--- a/shop.html
+++ b/shop.html
@@ -23,20 +23,20 @@
       </div>
     </div>
     </div>
+    <div class="caption">Магазин готовых шаблонов</div>
   </header>
   <main class="container clearfix">
-    <div class="caption"><h1>Магазин готовых шаблонов</h1></div>
     <section class="selection">
       <form action="#" method="#">
         <div class="price">
-          <h3>Стоимость</h3>
+          <h5>Стоимость</h5>
             <label for="min-price">от</label>
               <input id="min-price" type="text">
             <label for="max-price">до</label>
               <input id="max-price" type="text">
         </div>
         <div class="grid">
-          <h3>Сетка</h3>
+          <h5>Сетка</h5>
             <input id="adaptive" type="radio" name="grid" value="adaptive">
               <label for="adaptive">Адаптивная</label>
             <input id="fix" type="radio" name="grid" value="fix">
@@ -45,7 +45,7 @@
               <label for="rubber">Резиновая</label>
         </div>
         <div class="properties">
-          <h3>Особенности</h3>
+          <h5>Особенности</h5>
             <input id="slider" type="checkbox">
               <label for="slider">Слайдер</label>
             <input id="advantage-block" type="checkbox">
@@ -62,7 +62,7 @@
     </section>
     <section class="examples clearfix">
     <div class="gallery-sorting">
-      <h3>Сортировать</h3>
+      <h5>Сортировать</h5>
         <a href="#">по цене</a>
         <a href="#">по типу</a>
         <a href="#">по названию</a>
@@ -110,23 +110,24 @@
     </section>
   </main>
   <div class="map">
+    <div class="map-marker"></div>
       <div class="map-contacts">
-        <p>Nёrds design studio</p>
-        <p>191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <a href="tell">тел. +7(812)275-75-75</a>
-        <a class="btn" href="#">Напишите нам</a>
+        <p class="name">Nёrds design studio</p>
+        <p class="adress">191186 Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <a class="phone" href="tell">тел. +7(812)275-75-75</a>
+        <a class="btn-map" href="#">Напишите нам</a>
       </div>
   </div>
-  <footer class="container">
-    <div class="footer-social">
-      <a class="social-btn" href="#"></a>
-      <a class="social-btn" href="#"></a>
-      <a class="social-btn" href="#"></a>
-    </div>
-    <div class="friends">
-      <h4>Давайте дружить, это выгодно!</h4>
-      <p>Скидка 10% для друзей из социальных сетей</p>
-    </div>
-  </footer>
+  <footer class="container footer-container">
+  <div class="footer-social">
+    <a class="social-btn vk" href="#"></a>
+    <a class="social-btn fb" href="#"></a>
+    <a class="social-btn insta" href="#"></a>
+  </div>
+  <div class="friends">
+    <h4>Давайте дружить, это выгодно!</h4>
+    <p>Скидка 10% для друзей из социальных сетей</p>
+  </div>
+</footer>
 </body>
 </html>
